Added login form

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,52 +1,55 @@
 doctype html
-html.fullscreen-bg(lang='en')
+html(lang='en')
   head
-    title #{title}
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    title #{title} | Raspberry Pi Monitor System
+    // CSS
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500')
     link(rel='stylesheet', href='../public/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='../public/vendor/font-awesome/css/font-awesome.min.css')
-    link(rel='stylesheet', href='../public/vendor/linearicons/style.css')
-    link(rel='stylesheet', href='../public/stylesheets/main.css')
-    link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700', rel='stylesheet')    
-    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/apple-icon.png')
+    link(rel='stylesheet', href='../public/vendor/login/css/form-elements.css')
+    link(rel='stylesheet', href='../public/vendor/login/css/style.css')
+    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
     link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
   body
-    // WRAPPER
-    #wrapper
-        .vertical-align-wrap
-            .vertical-align-middle
-                .auth-box
-                    .left
-                        .content
-                            .header
-                                .logo.text-center
-                                    h3 Raspberry Pi Monitor System
-                                p.lead Login to your account
-                            form.form-auth-small(action='/register', method='post')
-                            .form-group
-                                label.control-label.sr-only(for='signin-email') Email or username
-                                input#signin-email.form-control(type='email', value='', name='password' placeholder='Email or username')
-                            .form-group
-                                label.control-label.sr-only(for='signin-password') Password
-                                input#signin-password.form-control(type='password', name='password' placeholder='Password')
-                            .form-group.clearfix
-                                label.fancy-checkbox.element-left
-                                input#chkSaveCredential(type='checkbox', name='chkSaveCredential')
-                                span Remember me
-                            button#btnSubmit.btn.btn-primary.btn-lg.btn-block(type='submit') LOGIN
-                            .bottom
-                                span.helper-text
-                                    i.fa.fa-lock
-                                        a(href='/forgot') Forgot password?
-                    .right
+    // Top content
+    .top-content
+      .inner-bg
+        .container
+          .row
+            .col-sm-8.col-sm-offset-2.text
+              h1
+                strong Raspberry Pi Monitor System
+              .description
+                p
+                  | #{title}
+          .row
+            .col-sm-6.col-sm-offset-3.form-box
+              form.registration-form(role='form', action='', method='post')
+                fieldset
+                  .form-top
+                    .form-top-left
+                      h3 #{title}
+                    .form-top-right
+                      i.fa.fa-user
+                  .form-bottom
+                    .form-group
+                      label(for='form-username') Username
+                      input#form-username.form-username.form-control(type='text', name='form-username', placeholder='Username...')
+                    .form-group
+                      label(for='form-password') Password
+                      input#form-password.form-password.form-control(type='password', name='form-password', placeholder='Password...')
+                    .form-group
+                      label(for='form-repeat-password') Repeat password
+                      input#form-repeat-password.form-repeat-password.form-control(type='password', name='form-repeat-password', placeholder='Repeat password...')
+                    .pull-right
+                      button.btn(type='submit') Login
                     .clearfix
-        // END WRAPPER
-    block scripts
-        script.
-            var chck = $("#chkSaveCredential")
-            var btnSubmit = $("#btnSubmit")
-            btnSubmit.on("click", function() {
-
-            })
+    // Javascript
+    script(src='../public/vendor/login/js/jquery-1.11.1.min.js')
+    script(src='../public/vendor/bootstrap/js/bootstrap.min.js')
+    script(src='../public/vendor/login/js/jquery.backstretch.min.js')
+    script(src='../public/vendor/login/js/retina-1.1.0.min.js')
+    script(src='../public/vendor/login/js/scripts.js')
