--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -127,7 +127,7 @@ block content
             .panel-body
               #visits-trends-chart.ct-chart
           // END MULTI CHARTS
-block script
+block scripts
   script.
     $(function() {
       var data, options;
