--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -12,11 +12,11 @@ nav.navbar.navbar-default.navbar-fixed-top
           a.dropdown-toggle.icon-menu(href='#', data-toggle='dropdown')
             i.lnr.lnr-alarm
           ul.dropdown-menu.notifications
-            each item in Notify.list
-              li
-                a.notification-item(href='/account/notification/#{item.Id}')
-                  span.dot.bg-warning
-                  | item.Content
+            //- each item in Notify.list
+            //-   li
+            //-     a.notification-item(href='/account/notification/#{item.Id}')
+            //-       span.dot.bg-warning
+            //-       | item.Content
 
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown')
