--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -15,8 +15,8 @@ html
     // GOOGLE FONTS
     link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;subset=vietnamese', rel='stylesheet')
     // ICONS
-    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='../public/images/favicon.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='../public/images/favicon.png')
   body
     #wrapper
       
