--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -15,8 +15,8 @@ html
     // GOOGLE FONTS
     link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;subset=vietnamese', rel='stylesheet')
     // ICONS
-    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='../public/images/favicon.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='../public/images/favicon.png')
   body
     #wrapper
       
@@ -42,10 +42,13 @@ html
     // Javascript
     script(src="../public/vendor/jquery/jquery.min.js")
     script(src='../public/vendor/bootstrap/js/bootstrap.min.js')
+    script(src='../public/js/jquery.timeago.min.js')
+    script(src='../public/js/soundmanager2-jsmin.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js')
     script(src='../public/vendor/jquery-slimscroll/jquery.slimscroll.min.js')
     script(src='../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
     script(src='../public/vendor/chartist/js/chartist.min.js')
     script(src='../public/js/common.js')
-
+    script(src='../public/js/socketProcessor.js')
+    script(src='../public/js/tablefilter.js')
     block scripts
