Added validate form Login

--- a/views/login.pug
+++ b/views/login.pug
@@ -27,7 +27,7 @@ html(lang='en')
                   | #{title}
           .row
             .col-sm-6.col-sm-offset-3.form-box
-              form.registration-form(role='form', action='', method='post')
+              form.login-form(role='form', action='', method='post')
                 fieldset
                   .form-top
                     .form-top-left
