fix routes and views

--- a/views/register.pug
+++ b/views/register.pug
@@ -63,11 +63,11 @@ html(lang='en')
                       label(for='form-fullname') Full name
                       input#form-fullname.form-fullname.form-control(type='text', name='form-fullname', placeholder='Full name...')
                     .form-group
-                      label(for='form-about-yourself') About yourself
+                      label(for='form-about-yourself') Avatar
                       textarea#form-about-yourself.form-about-yourself.form-control(name='form-about-yourself', placeholder='About yourself...')
                     .pull-right
                       button.btn.btn-previous(type='button') Previous
-                      button.btn(type='submit') Sign me up!
+                      button.btn(type='submit') Create and account
                     .clearfix
     // Javascript
     script(src='../public/vendor/login/js/jquery-1.11.1.min.js')
