Fixed URL fav ico

--- a/views/login.pug
+++ b/views/login.pug
@@ -11,8 +11,8 @@ html(lang='en')
     link(rel='stylesheet', href='../public/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href='../public/vendor/login/css/form-elements.css')
     link(rel='stylesheet', href='../public/vendor/login/css/style.css')
-    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='../public/images/favicon.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='../public/images/favicon.png')
   body
     // Top content
     .top-content
