--- a/views/login.pug
+++ b/views/login.pug
@@ -42,6 +42,8 @@ html(lang='en')
                     .form-group
                       label(for='form-password') Password
                       input#form-password.form-password.form-control(type='password', name='form-password', placeholder='Password...')
+                    .pull-left
+                      a.btn.btn-lg.btn-success(href="/register") Đăng ký
                     .pull-right
                       button.btn(type='submit') Login
                     .clearfix
