--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -12,15 +12,17 @@ nav.navbar.navbar-default.navbar-fixed-top
           a.dropdown-toggle.icon-menu(href='#', data-toggle='dropdown')
             i.lnr.lnr-alarm
           ul.dropdown-menu.notifications
-            //- each item in Notify.list
-            //-   li
-            //-     a.notification-item(href='/account/notification/#{item.Id}')
-            //-       span.dot.bg-warning
-            //-       | item.Content
+            each item in notification
+              li
+                a.notification-item(href='/account/notification/#{item.IDNotification}')
+                  span.dot.bg-info= item.Content
 
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown')
-            img.img-circle(src='#{user.AvatarPath}', alt='Avatar')
+            if user.AvatarPath
+              img.img-circle(src='#{user.AvatarPath}', alt='Avatar')
+            else
+              img.img-circle(src='../../../public/images/nullAvatar.png', alt='Avatar')
             span #{user.Fullname}
             i.icon-submenu.lnr.lnr-chevron-down
           ul.dropdown-menu
