--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -19,14 +19,14 @@ block content
               .profile-stat
                 .row
                   .col-md-4.stat-item
-                    | #{activities.length} 
+                    | #{first_activities.length} 
                     span Activies
                   .col-md-4.stat-item
                     | Joined on
-                    span #{user.CreatedAt}
+                    span #{first_activities.CreatedAt}
                   .col-md-4.stat-item
                     | Verified on 
-                    span #{user.VerifiedAt}
+                    span #{first_activities.VerifiedAt}
             // END PROFILE HEADER
             // PROFILE DETAIL
             .profile-detail
@@ -94,29 +94,29 @@ block content
                       | You have visited 
                       a(href='/admin') Dashboard
                       | for the first time at
-                      a #{user.FirstVisited}
+                      a #{first_activities.FirstVisited}
                       span.timeago.timestamp(datetime='#{user.FirstVisited}')
                   li
                     i.fa.fa-check.activity-icon
                     p
                       | First login at
-                      a #{user.FirstLogin}
-                      span.timeago.timestamp(datetime='#{user.FirstLogin}')
+                      a #{first_activities.FirstLogin}
+                      span.timeago.timestamp(datetime='#{first_activities.FirstLogin}')
                   li
                     i.fa.fa-check.activity-icon
-                    if user.IsVerified == true
+                    if first_activities.Verified == true
                       p
-                        | Account has been verified at #{user.VerifiedAt}
-                        span.timeago.timestamp(datetime='#{user.VerifiedAt}')
+                        | Account has been verified at #{first_activities.VerifiedAt}
+                        span.timeago.timestamp(datetime='#{first_activities.VerifiedAt}')
                     else
                       p
                         | Your account haven't been confirmed. Please check your email to verify this account
                   li
                     i.fa.fa-check.activity-icon
                     p
-                      | Joined on #{user.CreatedAt} 
+                      | Joined on #{first_activities.CreatedAt} 
                       a(href='#') assigned tasks
-                      span.timeago.timestamp(datetime='#{user.CreatedAt}')
+                      span.timeago.timestamp(datetime='#{first_activities.CreatedAt}')
                 .margin-top-30.text-center
             // END TABBED CONTENT
           // END RIGHT COLUMN
