--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,6 +34,10 @@ th {
     font-weight: 300;
 }
 
+.unread {
+    background: #fafafa !important;
+}
+
 footer {
     position: absolute;
     bottom: 0;
