--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -11,11 +11,21 @@ nav.navbar.navbar-default.navbar-fixed-top
         li.dropdown
           a.dropdown-toggle.icon-menu(href='#', data-toggle='dropdown')
             i.lnr.lnr-alarm
-          ul.dropdown-menu.notifications
-            each item in notification
+          ul.dropdown-menu.notifications#notification-panel
+            if notification.length > 0
+              each item in notification
+                if item.IsRead == 0
+                  li
+                    a.notification-item(href='/account/notification/#{item.IDNotification}')
+                      span.dot.bg-info= item.Content
+                  else
+                    li
+                      a.notification-item.unread(href='/account/notification/#{item.IDNotification}')
+                        span.dot.bg-info= item.Content
+            else
               li
-                a.notification-item(href='/account/notification/#{item.IDNotification}')
-                  span.dot.bg-info= item.Content
+                a.notification-item
+                  | There are no notifications
 
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown')
