--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -17,11 +17,13 @@ nav.navbar.navbar-default.navbar-fixed-top
                 if item.IsRead == 0
                   li
                     a.notification-item(href='/account/notification/#{item.IDNotification}')
-                      span.dot.bg-info= item.Content
+                      span.dot.bg-info 
+                      | #{item.Content}
                 else
                   li
                     a.notification-item.unread(href='/account/notification/#{item.IDNotification}')
-                      span.dot.bg-info= item.Content
+                      span.dot.bg-info 
+                      | #{item.Content}
             else
               li
                 a.notification-item
@@ -33,7 +35,8 @@ nav.navbar.navbar-default.navbar-fixed-top
               img.img-circle(src='#{user.AvatarPath}', alt='Avatar')
             else
               img.img-circle(src='../../../public/images/nullAvatar.png', alt='Avatar')
-            span #{user.Fullname}
+            span 
+            | #{user.Fullname}
             i.icon-submenu.lnr.lnr-chevron-down
           ul.dropdown-menu
             li
