--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -19,28 +19,28 @@ block content
                 ul.list-unstyled.list-justify
                   li
                     | Platform 
-                    span #{osinfo.platform}
+                    span #{osInfo.platform}
                   li
                     | Distro 
-                    span #{osinfo.distro}
+                    span #{osInfo.distro}
                   li
                     | Release 
-                    span #{osinfo.release}
+                    span #{osInfo.release}
                   li
                     | Code name 
-                    span #{osinfo.codename}
+                    span #{osInfo.codename}
                   li
                     | Kernel 
-                    span #{osinfo.kernel}
+                    span #{osInfo.kernel}
                   li
                     | Architecture 
-                    span #{osinfo.arch}
+                    span #{osInfo.arch}
                   li
                     | Hostname 
-                    span #{osinfo.hostname}
+                    span #{osInfo.hostname}
                   li
                     | Logo file 
-                    span #{osinfo.logofile}
+                    span #{osInfo.logofile}
               .col-md-4
                 h4.heading
                   b Central Processor Unit
