--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -106,19 +106,19 @@ block content
                 ul.list-unstyled.list-justify.root
                   li
                     | Read IO 
-                    span.data #{diskIO.rio}
+                    span.data #{disksIO.rio}
                   li
                     | Write IO 
-                    span.data #{diskIO.wio}
+                    span.data #{disksIO.wio}
                   li
                     | Transfer IO 
-                    span.data #{diskIO.tio}
+                    span.data #{disksIO.tio}
                   li
                     | Read per second 
-                    span.data #{diskIO.rio_sec}
+                    span.data #{disksIO.rio_sec}
                   li
                     | Write per second 
-                    span.data #{diskIO.wio_sec}
+                    span.data #{disksIO.wio_sec}
               .col-md-4
                 h4.heading
                   b Networking
