--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -53,7 +53,7 @@ block content
                     span #{cpuinfo.brand}
                   li
                     | Speed 
-                    span #{cpuinfo.speed}
+                    span #{cpuinfo.speed.avg}
                   li
                     | Total cores 
                     span #{cpuinfo.cores}
