--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -106,19 +106,19 @@ block content
                 ul.list-unstyled.list-justify.root
                   li
                     | Read IO 
-                    span #{disksIO.rio}
+                    span #{disksIO.rIO}
                   li
                     | Write IO 
-                    span #{disksIO.wio}
+                    span #{disksIO.wIO}
                   li
                     | Transfer IO 
-                    span #{disksIO.tio}
+                    span #{disksIO.tIO}
                   li
                     | Read per second 
-                    span #{disksIO.rio_sec}
+                    span #{disksIO.rIO_sec}
                   li
                     | Write per second 
-                    span #{disksIO.wio_sec}
+                    span #{disksIO.wIO_sec}
               .col-md-4
                 h4.heading
                   b Networking
