--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -96,7 +96,7 @@ block content
                     span.data #{mem.swaptotal}
                   li
                     | Swap use 
-                    span.data #{mem.swapuse}
+                    span.data #{mem.swapused}
                   li
                     | Swap free 
                     span.data #{mem.swapfree}
