--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -40,31 +40,31 @@ block content
                   ul.list-unstyled.list-justify
                     li
                     | Total 
-                    span.data #{mem.total}
+                    span.data #{total}
                   li
                     | Free 
-                    span.data #{mem.free}
+                    span.data #{free}
                   li
                     | In used 
-                    span.data #{mem.inused}
+                    span.data #{inused}
                   li
                     | Active 
-                    span.data #{mem.active}
+                    span.data #{active}
                   li
                     | Available 
-                    span.data #{mem.available}
+                    span.data #{available}
                   li
                     | Buffer cache 
-                    span.data #{mem.buffer_cache}
+                    span.data #{buffer_cache}
                   li
                     | Swap total 
-                    span.data #{mem.swap_total}
+                    span.data #{swap_total}
                   li
                     | Swap use 
-                    span.data #{mem.swap_used}
+                    span.data #{swap_used}
                   li
                     | Swap free 
-                    span.data #{mem.swap_free}
+                    span.data #{swap_free}
 
 block scripts
 
