remove jq step, fix js path

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -40,16 +40,15 @@ html
 
     // END WRAPPER
     // Javascript
-    script(src="../public/vendor/jquery/jquery.min.js")
-    script(src='../public/vendor/bootstrap/js/bootstrap.min.js')
-    script(src='../public/js/jquery.timeago.min.js')
-    script(src='../public/js/soundmanager2-jsmin.js')
+    script(src="../../public/vendor/jquery/jquery.min.js")
+    script(src='../../public/vendor/bootstrap/js/bootstrap.min.js')
+    script(src='../../public/js/jquery.timeago.min.js')
+    script(src='../../public/js/soundmanager2-jsmin.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js')
-    script(src='../public/vendor/jquery-slimscroll/jquery.slimscroll.min.js')
-    script(src='../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
-    script(src='../public/vendor/chartist/js/chartist.min.js')
-    script(src='../public/js/common.js')
-    script(src='../public/js/socketProcessor.js')
-    script(src='../public/js/tablefilter.js')
-    script(src="../public/vendor/jquery.steps/jquery.steps.min.js")
+    script(src='../../public/vendor/jquery-slimscroll/jquery.slimscroll.min.js')
+    script(src='../../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
+    script(src='../../public/vendor/chartist/js/chartist.min.js')
+    script(src='../../public/js/common.js')
+    script(src='../../public/js/socketProcessor.js')
+    script(src='../../public/js/tablefilter.js')
     block scripts
