--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -153,16 +153,16 @@ block content
                     span #{filesystem[0].type}
                   li
                     | Size 
-                    span #{filesystem[0].size}
+                    span.data #{filesystem[0].size}
                   li
                     | Used 
-                    span #{filesystem[0].used}
+                    span.data #{filesystem[0].used}
                   li
                     | Use 
-                    span #{filesystem[0].use}
+                    span.data #{filesystem[0].use}
                   li
                     | Mount 
-                    span #{filesystem[0].mount}
+                    span.data #{filesystem[0].mount}
         .panel-footer
           .row
             .col-md-12.text-right
