--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -162,7 +162,7 @@ block content
                     span.data #{filesystem[0].use}
                   li
                     | Mount 
-                    span.data #{filesystem[0].mount}
+                    span #{filesystem[0].mount}
         .panel-footer
           .row
             .col-md-12.text-right
