--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -52,19 +52,19 @@ block content
                     | Brand 
                     span #{cpuinfo.brand}
                   li
-                    | Speed 
+                    | Speed (GHz)
                     span #{cpuinfo.speed.avg}
                   li
                     | Total cores 
                     span #{cpuinfo.cores}
                   li
-                    | Minimum speed 
+                    | Minimum speed (GHz)
                     span #{cpuCurrentspeed.min}
                   li
-                    | Maximum speed 
+                    | Maximum speed (GHz)
                     span #{cpuCurrentspeed.max}
                   li
-                    | Average speed 
+                    | Average speed (GHz)
                     span #{cpuCurrentspeed.avg}
                   li
                     | Temperature 
