--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -48,7 +48,7 @@ block content
               #headline-chart.ct-chart
             .col-md-3
               .weekly-summary.text-right
-                span.number #{cpu.cores}
+                span.number #{cores}
                 span.info-label Cores
               .weekly-summary.text-right
                 span.number #{speed}
