--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -59,13 +59,13 @@ block content
                     span #{cpuinfo.cores}
                   li
                     | Minimum speed (GHz)
-                    span #{cpuCurrentspeed.min}
+                    span #{min}
                   li
                     | Maximum speed (GHz)
-                    span #{cpuCurrentspeed.max}
+                    span #{max}
                   li
                     | Average speed (GHz)
-                    span #{cpuCurrentspeed.avg}
+                    span #{avg}
                   li
                     | Temperature 
                     span Not available
