--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -68,7 +68,7 @@ block content
                     span #{avg}
                   li
                     | Temperature 
-                    span Not available
+                    span #{cpuTemp} °C
               .col-md-4
                 h4.heading
                   b Memory
