--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/layout.pug
 
 block link
-  -var selected = '/';
+  -var selected = '/admin';
 
 block content
   .main-content
