--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -21,7 +21,7 @@ html
     #wrapper
       
       block link
-          -var selected = '/'; //default
+          -var selected = '/admin'; //default
       -var menu = [["Dashboard", "fa-dashboard", "/admin"],["System overview", "fa-desktop", "/admin/overview"],["CPU", "fa-microchip", "/admin/cpu"], ["Memory", "fa-building-o", "/admin/memory"], ["Disk", "fa-database", "/admin/disk"], ["Filesystem", "fa-file", "/admin/filesystem"], ["Linux packages", "fa-folder", "/admin/filesystem"], ["Processes", "fa-cogs", "/admin/processes"], ["Network", "fa-wifi", "/admin/network"], ["Linux Firewall", "fa-shield", "/"], ["System User & Group", "fa-users", "/"], ["Web Terminal", "fa-terminal", "/"]]
 
       //- ["Title", "fa-icon", "link"]
