--- a/views/layouts/sysinfo/processes.pug
+++ b/views/layouts/sysinfo/processes.pug
@@ -73,7 +73,7 @@ block content
                   each val in list
                     tr
                       td
-                        input(type='checkbox')
+                        input(type='checkbox', onchange='checkOne($(this))') 
                       td= val.pid
                       td= val.nice
                       td= val.pcpu
@@ -113,3 +113,7 @@ block scripts
 
       console.log(arr);
     });
+  script.
+    function checkOne(ele){
+        alert(ele.attr('type'))
+    }
